--- a/jquery.wysiwyg.old-school.css
+++ b/jquery.wysiwyg.old-school.css
@@ -13,10 +13,14 @@ div.wysiwyg ul.toolbar li.active { background-color: rgb(255, 255, 64); border: 
 
 div.wysiwyg ul.toolbar li.disabled, div.wysiwyg ul.toolbar li.wysiwyg-button-hover.disabled, div.wysiwyg ul.toolbar li.active.disabled { opacity: 0.5; filter:alpha(opacity=50); border: 0px none transparent; padding: 1px; pointer: auto; }
 
+
+
+
 div.wysiwyg ul.toolbar li.bold { background-position: 0 -16px; }
 div.wysiwyg ul.toolbar li.italic { background-position: -16px -16px; }
 div.wysiwyg ul.toolbar li.strikeThrough { background-position: -32px -16px; }
 div.wysiwyg ul.toolbar li.underline { background-position: -48px -16px; }
+div.wysiwyg ul.toolbar li.highlight { background-position: -48px -96px; }
 
 div.wysiwyg ul.toolbar li.justifyLeft { background-position: 0 0; }
 div.wysiwyg ul.toolbar li.justifyCenter { background-position: -16px 0; }
@@ -43,6 +47,10 @@ div.wysiwyg ul.toolbar li.h4 { background-position: -48px -32px; }
 div.wysiwyg ul.toolbar li.h5 { background-position: -64px -32px; }
 div.wysiwyg ul.toolbar li.h6 { background-position: -80px -32px; }
 
+div.wysiwyg ul.toolbar li.paragraph { background-position: 0px -96px; }
+div.wysiwyg ul.toolbar li.colorpicker { background-position: -16px -96px; }
+div.wysiwyg ul.toolbar li.fullscreen { background-position: -32px -96px; }
+
 div.wysiwyg ul.toolbar li.cut { background-position: -32px -64px; }
 div.wysiwyg ul.toolbar li.copy { background-position: -48px -64px; }
 div.wysiwyg ul.toolbar li.paste { background-position: -64px -64px; }
@@ -59,5 +67,27 @@ div.wysiwyg ul.toolbar li.removeFormat { background-position: -80px -64px; }
 
 div.wysiwyg ul.toolbar li.empty { background-position: -64px -80px; }
 
+div.wysiwyg ul.toolbar li.code { background-position: -64px -96px; }
+div.wysiwyg ul.toolbar li.cssWrap { background-position: -80px -96px; }
+
+
+
 div.wysiwyg iframe { border: 0;  clear: left; margin: 4px 0 0 1px; }
 
+/* dialog */
+.wysiwyg-dialog { position:fixed; top:50px; left:50px; width:450px; height:300px; background:transparent; font:14px "Helvetic Neue", Helvetica,Arial,sans-serif; }
+.wysiwyg-dialog .wysiwyg-dialog-topbar { background:#333; border:1px #111 solid; color:white; padding:10px; position:relative; }
+.wysiwyg-dialog .wysiwyg-dialog-topbar .wysiwyg-dialog-close-wrapper .wysiwyg-dialog-close-button { color:white; text-decoration:none; display:block; padding:6px 10px; position:absolute; right:12px; top:50%; height:14px; margin-top:-12px; }
+.wysiwyg-dialog .wysiwyg-dialog-topbar .wysiwyg-dialog-close-wrapper a.wysiwyg-dialog-close-button:hover { background:#666; }
+.wysiwyg-dialog .wysiwyg-dialog-topbar .wysiwyg-dialog-title { font-size:20px; font-weight:bold; padding:5px; }
+.wysiwyg-dialog .wysiwyg-dialog-content { border:1px #ccc solid; border-top:0; padding:15px; background:white; }
+.wysiwyg-dialog-modal-div { position:absolute; top:0px; left:0px; width:100%; height:100%; background-color:rgb(255,255,255); background-color:rgba(0,0,0,0.5); filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000); -ms-filter:"progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000)";}
+.wysiwyg-dialog-content form.wysiwyg fieldset { border:1px #ccc solid; }
+.wysiwyg-dialog-content form.wysiwyg legend { padding:7px; }
+.wysiwyg-dialog-content form.wysiwyg .form-row { clear:both; padding:4px 0; }
+.wysiwyg-dialog-content form.wysiwyg .form-row label, .wysiwyg-dialog form.wysiwyg .form-row .form-row-key { display:block; float:left; width:35%; text-align:right; padding:4px 5px; }
+.wysiwyg-dialog-content form.wysiwyg .form-row .form-row-value { display:block; float:left; width:55%; }
+.wysiwyg-dialog-content form.wysiwyg .form-row input.width-auto { width:auto; }
+.wysiwyg-dialog-content form.wysiwyg input.width-small { width:50px; min-width:50px; max-width:50px; }
+.wysiwyg-dialog-content form.wysiwyg input, .wysiwyg-dialog form.wysiwyg select { padding:2px; width:100%; margin:2px; }
+.wysiwyg-dialog-content form.wysiwyg input[type=submit], .wysiwyg-dialog form.wysiwyg input[type=reset] { padding:2px 7px; width:auto; }
